--- a/CV.tex
+++ b/CV.tex
@@ -288,15 +288,7 @@ Hello, in this resume I want to introduce myself and show the reasons why you ca
 	\vfill\null
 
 
-\cvevent
-{07/2020 - 09/2020}
-	{Student}
-	{"White Belt C++", Yandex}
-	{Basics of programming in C++, familiarity with the language, to perform basic tasks and projects.}
-	\vfill\null
 
-
-	
 \cvevent
 {2021}
 	{Student}
@@ -330,6 +322,13 @@ Hello, in this resume I want to introduce myself and show the reasons why you ca
 	{An educational trip with an already familiar laboratory, where work on the article was carried out under the guidance of Alexey Naumov. The team conducted research and proved in practice new approaches to working with UVIP for RL.}
 	\vfill\null
 
+
+\cvevent
+{11/2021 - today}
+	{Trainee Researcher}
+	{International Laboratory of Stochastic Algorithms and Multidimensional Data Analysis}
+	{Training, understanding and optimization of artificial intelligence models. Work on articles on the topic of RL.}
+	\vfill\null
 
 
 \cvsection{Projects}
