--- a/CV.tex
+++ b/CV.tex
@@ -274,6 +274,17 @@
 
 Hello, in this resume I want to introduce myself and show the reasons why you can choose me for further work and training. I know how to learn and am willing to spend time developing myself in the areas that interest me. I hope that after graduating from the university, the acquired "knowledge base" will help me get not only a well-paid job, but also an interesting one)))
 
+\vspace{10pt}
+\cvsection{Work experience}
+\vspace{4pt}
+
+\cvevent
+{11/2021 - today}
+	{Trainee Researcher}
+	{International Laboratory of Stochastic Algorithms and Multidimensional Data Analysis}
+	{Training, understanding and optimization of artificial intelligence models. Work on articles on the topic of RL.}
+	\vfill\null
+
 
 \vspace{10pt}
 \cvsection{Additional education}
@@ -323,12 +334,7 @@ Hello, in this resume I want to introduce myself and show the reasons why you ca
 	\vfill\null
 
 
-\cvevent
-{11/2021 - today}
-	{Trainee Researcher}
-	{International Laboratory of Stochastic Algorithms and Multidimensional Data Analysis}
-	{Training, understanding and optimization of artificial intelligence models. Work on articles on the topic of RL.}
-	\vfill\null
+
 
 
 \cvsection{Projects}
